--- a/index.html
+++ b/index.html
@@ -1892,7 +1892,7 @@
                     <div class="inspiration-container">
                         <h4 class="inspiration-title">À quoi ressemble un module de réservation intégré ?</h4>
                         <p style="text-align: center; max-width: 700px; margin: 0 auto 2rem auto;">Votre visiteur peut choisir un jour, puis un créneau horaire disponible, et enfin remplir ses informations pour confirmer. Le tout, sans jamais quitter votre site.</p>
-                        <img src="https://i.ibb.co/k8W9k4d/booking-example-calendly.jpg" alt="Exemple d'un module de réservation Calendly intégré sur un site web" class="inspiration-single-image">
+                        <img src="images/apercu-calendly.jpg" alt="Exemple d'un module de réservation Calendly intégré sur un site web" class="inspiration-single-image">
                     </div>
 
                     <!-- Élément 1 : Titre et Introduction -->
