--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="hero-container">
                     <!-- EN-TÊTE AVEC LE LOGO (MAINTENANT ICI) -->
                     <header class="site-header">
-                        <img src="https://i.ibb.co/bXj0Z3D/logo-horizontal-cream.png"
+                        <img src="images/logo-clartem-blanc.png"
                             alt="Logo Clartem - Création de sites web pour coachs, consultants et formateurs" class="logo">
                     </header>
 
